简化appctrl.sh，去掉rmi's jmx 设置(目前采用 jmxmp & jmxhtml访问MBeanServer);将isCheckResponseStatus & isShowInfoLog 信息迁移到ZK中进行配置